# 380-svg

./: README.md
30-source/: .gitignore  CLAUDE.md  DR-office.dsl  JohnsRoom.dsl  README.md  bobbysRoom.dsl  floorplans.md  grid.dsl  grid2.dsl  linestyles.dsl  pyproject.toml  ruler.dsl  rulerh.dsl  star.dsl  test.dsl  x.dsl
30-source/RCS/: .python-version,v  CLAUDE.md,v  DR-office.dsl,v  JohnsRoom.dsl,v  README.md,v  bobbysRoom.dsl,v  grid.dsl,v  grid2.dsl,v  linestyles.dsl,v  pyproject.toml,v  ruler.dsl,v  rulerh.dsl,v  rulerv.dsl,v  star.dsl,v  star2.dsl,v  star3.dsl,v  test.dsl,v
30-source/assets/: 380-030.html  380-031.css  380-031.css,v  380-032.js
30-source/docs/: 2-column-div-snippet  380-080-SVGDSL-users-guide.md  debugging-guide.md  design-guide.md  design.md  issue20plan.md  statements-and-tokens.md  string-type-plan.md  ug-errata-1.md  users-guide.md  users-guide.md-20260511-1449
30-source/drawings/: 380-040-progressive-reveal.sh  380-050-set-refresh.sh  380-101-4port.dsl  380-102-JohnsRoom.dsl  380-103-DR-office.dsl  380-104-linestyles.dsl  380-105-dotswarm.dsl  380-106-bobbysRoom.dsl  380-107-smfigure.dsl  380-108-spaces.dsl  380-109-grid20x16.dsl  380-110-circle1.dsl  380-111-circlerow.dsl  380-112-border.dsl  380-113-page-letter-landscape-def.dsl  380-114-page-tabloid-landscape-def.dsl  380-115-template-landscape.dsl  380-116-examples.dsl  380-117-basic-message.dsl  380-118-master-bedroom.dsl  380-119-ruler.dsl  380-120-wide.dsl  380-121-template-portrait.dsl  380-122-page-letter-portrait-def.dsl  380-123-page-layout.dsl  380-124-viewport-mockup.dsl  (+79 more)
(+187 files in other folders)
