[project]
name = "svgdsl"
version = "0.1.0"
description = "Generate SVG floor plans from text descriptions"
readme = "README.md"
authors = [
    { name = "Steve Carol", email = "sg.carol@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
svgdsl = "svgdsl.cli:main"
